made index.hbs center to sides bigger, fixed the missing border bottom under page titles, also removed movie title hint replace

--- a/public/less/sections/index.less
+++ b/public/less/sections/index.less
@@ -15,8 +15,8 @@ h1, h2 {
   font-family: @font1;
   padding-bottom: 0.25em;
 
-  .heading {
-    margin-bottom: 1em;
+  &.heading {
+    margin-bottom: 0.2em;
     border-bottom: 1px solid @rgold;
   }
 }
@@ -37,8 +37,7 @@ label {
 }
 img {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
 /* class fix-button gives styling back to buttons and is applied to #'s newGame,hiScores,submit/hint-button */
